section coaches is done

--- a/app/components/main_index.html
+++ b/app/components/main_index.html
@@ -157,4 +157,170 @@
             </p>
         </div>
     </section>
+    <section class="base">
+        <div class="container">
+            <div class="base__content">
+                <h2 class="base__content-title">База знаний с 1 по 11 класс</h2>
+                <div class="base__choose">
+                    <div class="base__choose-column">
+                        <p class="base__choose-subjects">География</p>
+                        <ul class="classes">
+                            <li class="class">
+                                <a href="#" class="class-link">5</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">6</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">7</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">8</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">9</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">10</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">11</a>
+                            </li>
+                        </ul>
+                        <p class="base__choose-subjects">Биология</p>
+                        <ul class="classes">
+                            <li class="class">
+                                <a href="#" class="class-link">5</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">6</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">7</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">8</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">9</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">10</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">11</a>
+                            </li>
+                        </ul>
+                        <p class="base__choose-subjects">Обществознание</p>
+                        <ul class="classes">
+                            <li class="class">
+                                <a href="#" class="class-link">5</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">6</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">7</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">8</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">9</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">10</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">11</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="base__choose-column">
+                        <p class="base__choose-subjects">География</p>
+                        <ul class="classes">
+                            <li class="class">
+                                <a href="#" class="class-link">1</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">2</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">3</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">4</a>
+                            </li>
+                        </ul>
+                        <p class="base__choose-subjects">Астрономия</p>
+                        <ul class="classes">
+                            <li class="class">
+                                <a href="#" class="class-link">10</a>
+                            </li>
+                            <li class="class">
+                                <a href="#" class="class-link">11</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="coaches">
+        <div class="container">
+            <div class="coaches__info">
+                <h2 class="coaches__info-title">
+                    Мы помогаем интеллектуальному развитию детей
+                </h2>
+                <p class="coaches__info-text">
+                    и реализации их потенциала, сохраяя атмосферу детства
+                </p>
+                <div class="coaches__list">
+                    <div class="coaches__list-item">
+                        <img
+                            src="images/src/coach.jpg"
+                            alt=""
+                            class="coaches__list-image"
+                        /><a href="" class="coaches__list-link"
+                            >Марина Мальцева</a
+                        ><span class="coaches__list-desc"
+                            >Преподаватель по Биологии</span
+                        >
+                    </div>
+                    <div class="coaches__list-item">
+                        <img
+                            src="images/src/coach.jpg"
+                            alt=""
+                            class="coaches__list-image"
+                        /><a href="" class="coaches__list-link">Ольга Жукова</a
+                        ><span class="coaches__list-desc"
+                            >Учитель начальных классов</span
+                        >
+                    </div>
+                    <div class="coaches__list-item">
+                        <img
+                            src="images/src/coach.jpg"
+                            alt=""
+                            class="coaches__list-image"
+                        /><a href="" class="coaches__list-link"
+                            >Валерия Дмитриева</a
+                        ><span class="coaches__list-desc"
+                            >Учитель начальных классов</span
+                        >
+                    </div>
+                    <div class="coaches__list-item">
+                        <img
+                            src="images/src/coach.jpg"
+                            alt=""
+                            class="coaches__list-image"
+                        /><a href="" class="coaches__list-link"
+                            >Валерия Дмитриева</a
+                        ><span class="coaches__list-desc"
+                            >Учитель начальных классов</span
+                        >
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
