--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,5 +1,110 @@
-<body>
-    <h1>Hello footer</h1>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__info">
+                <h1 class="footer__info-title">Cosmologik</h1>
+                <p class="footer__info-text">Гик по вселенной</p>
+            </div>
+            <div class="footer__menu">
+                <div class="footer__menu-social">
+                    <div class="footer__menu-social-wrapper">
+                        <h6 class="footer__menu-title">Мы в соц.сетях:</h6>
+                        <ul class="footer__social-list">
+                            <li class="footer__social-item">
+                                <a href="#" class="footer__social-link">
+                                    <img
+                                        src="images/src/icons/social/vk.svg"
+                                        alt="social_img"
+                                        class="footer__social-img"
+                                    />
+                                </a>
+                            </li>
+                            <li class="footer__social-item">
+                                <a href="#" class="footer__social-link">
+                                    <img
+                                        src="images/src/icons/social/telegram.svg"
+                                        alt="social_img"
+                                        class="footer__social-img"
+                                    />
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__menu-agree">
+                        <a href="#">Соглашение на обработку персональных данных</a>
+                    </div>
+                </div>
+                <div class="footer__menu-close">
+                    <h6 class="footer__menu-title">Ближний космос</h6>
+                    <ul class="footer__menu-list">
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">
+                                Солнечная система
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link"
+                                >Планеты</a
+                            >
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link"
+                                >Спутники</a
+                            >
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">Кометы</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link"
+                                >Метеориты</a
+                            >
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link"
+                                >Астероиды</a
+                            >
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__menu-far">
+                    <h6 class="footer__menu-title">Далёкий космос</h6>
+                    <ul class="footer__menu-list">
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">Звёзды</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link"
+                                >Созвездия</a
+                            >
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link"
+                                >Черные дыры</a
+                            >
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link"
+                                >Вселенная</a
+                            >
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link"
+                                >Галактика</a
+                            >
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__menu-agree footer__menu-agree--mobile">
+                    <a href="#">Соглашение на обработку персональных данных</a>
+                </div>
+            </div>
+        
+            <div class="footer__bottom">
+                <p class="footer__bottom-text">Копирование и размещение на других сайтах запрещено.</p>
+                <p class="footer__bottom-copy">2024 &copy; <a href="#">cosmologik.ru</a></p>
+            </div>
+        </div>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
