--- a/app/components/header.html
+++ b/app/components/header.html
@@ -16,6 +16,8 @@
         />
         <title>Cosmologik</title>
     </head>
+    <body>
+        
     <header class="header">
         <div class="container">
             <div class="header__wrapper">
