--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -31,7 +31,7 @@
         line-height: 56px;
         color: $black;
     }
-    & > .coaches__list-desc {
+    & .coaches__list-desc {
         color: #333;
     }
 }
