start conclusion section

--- a/app/components/main_asteroids.html
+++ b/app/components/main_asteroids.html
@@ -21,3 +21,80 @@
     </div>
 </div>
 <!--=include article-start.html -->
+<div class="main-content">
+    <div class="container">
+        <div class="main-content__wrapper">
+            <h2 class="main-content__title">Заголовок второго уровня</h2>
+            <p class="main-content__text">
+                <span>Астеро́ид</span> (распространённый до 2006 года
+                синоним — малая планета)  — относительно небольшое небесное
+                тело Солнечной системы, движущееся по орбите вокруг Солнца.
+                Астероиды значительно уступают по массе и размерам планетам,
+                имеют неправильную форму и не имеют атмосферы, хотя при этом и у
+                них могут быть спутники. Входят в категорию малых тел Солнечной
+                системы.
+            </p>
+            <div class="tabel-list">
+                <p class="tabel-list__title">Список астероидов:</p>
+                <div class="tabel-list__wrapper">
+                    <ul class="tabel-list__list">
+                        <li class="tabel-list__item">Церера</li>
+                        <li class="tabel-list__item">Паллада</li>
+                        <li class="tabel-list__item">Юнона</li>
+                        <li class="tabel-list__item">Веста</li>
+                        <li class="tabel-list__item">Астрея</li>
+                        <li class="tabel-list__item">Геба</li>
+                        <li class="tabel-list__item">Флора</li>
+                        <li class="tabel-list__item">Метида</li>
+                    </ul>
+                    <ul class="tabel-list__list">
+                        <li class="tabel-list__item">Эгерия</li>
+                        <li class="tabel-list__item">Ирена</li>
+                        <li class="tabel-list__item">Эвномия</li>
+                        <li class="tabel-list__item">Психея</li>
+                        <li class="tabel-list__item">Фетида</li>
+                        <li class="tabel-list__item">Мельпомена</li>
+                        <li class="tabel-list__item">Гигея</li>
+                        <li class="tabel-list__item">Парфенопа</li>
+                    </ul>
+                    <ul class="tabel-list__list">
+                        <li class="tabel-list__item">Фокея</li>
+                        <li class="tabel-list__item">Прозерпина</li>
+                        <li class="tabel-list__item">Эвтерпа</li>
+                        <li class="tabel-list__item">Беллона</li>
+                        <li class="tabel-list__item">Амфитрита</li>
+                        <li class="tabel-list__item">Урания</li>
+                        <li class="tabel-list__item">Виктория</li>
+                        <li class="tabel-list__item">Ирида</li>
+                    </ul>
+                    <ul class="tabel-list__list">
+                        <li class="tabel-list__item">Фортуна</li>
+                        <li class="tabel-list__item">Массалия</li>
+                        <li class="tabel-list__item">Лютеция</li>
+                        <li class="tabel-list__item">Каллиопа</li>
+                        <li class="tabel-list__item">Талия</li>
+                        <li class="tabel-list__item">Фемида</li>
+                    </ul>
+                </div>
+            </div>
+            <h2 class="main-content__title">Опасность астероидов</h2>
+            <p class="main-content__text">
+                Несмотря на то, что Земля значительно больше всех известных
+                астероидов, столкновение с телом размером более 3 км может
+                привести к уничтожению цивилизации. Столкновение с телом
+                меньшего размера (но более 50 метров в диаметре) может привести
+                к многочисленным жертвам и гигантскому экономическому ущербу.Чем
+                больше и тяжелее астероид, тем большую опасность он
+                представляет, однако и обнаружить его в этом случае гораздо
+                легче. Наиболее опасным на данный момент считается
+                астероид Апофис, диаметром около 300 м, при столкновении с
+                которым может быть уничтожена целая страна.
+            </p>
+            <p class="main-content__title-min">
+                Оценки последствий падения астероидов
+            </p>
+            <div class="main-content__grey-bg"></div>
+        </div>
+    </div>
+</div>
+<!--=include conclusion.html -->
