--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,8 @@
 @import 'header';
 @import 'hello';
 @import 'main-index';
+@import 'main';
 @import 'about';
+@import 'conlusion';
 @import 'article-component';
 @import 'footer';
