--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,6 @@
 @import 'main-index';
 @import 'main';
 @import 'about';
-@import 'conlusion';
+@import 'conclusion';
 @import 'article-component';
 @import 'footer';
