page mercury is done

--- a/app/components/conclusion.html
+++ b/app/components/conclusion.html
@@ -137,7 +137,11 @@
                     Полезные статьи о планете Меркурий:
                 </p>
                 <div class="conclusion__recomendation-more">
-                    <div class="conclusion__recomendation-list">
+                    <div
+                        class="conclusion__recomendation-list"
+                        data-simplebar
+                        data-simplebar-direction="rtl"
+                    >
                         <div class="conclusion__recomendation-item">
                             <img
                                 src="images/sun.jpg"
@@ -148,10 +152,13 @@
                                 <span class="conclusion__recomendation-time"
                                     >23 августа &bull; 10 минут</span
                                 >
-                                <p class="conclusion__recomendation-title">
+                                <a
+                                    href="#"
+                                    class="conclusion__recomendation-title"
+                                >
                                     На Солнце произошла мощная вспышка для
                                     примера более длинное название материала
-                                </p>
+                                </a>
                             </div>
                         </div>
                         <div class="conclusion__recomendation-item">
@@ -164,10 +171,13 @@
                                 <span class="conclusion__recomendation-time"
                                     >23 августа &bull; 10 минут</span
                                 >
-                                <p class="conclusion__recomendation-title">
+                                <a
+                                    href="#"
+                                    class="conclusion__recomendation-title"
+                                >
                                     На Солнце произошла мощная вспышка для
                                     примера более длинное название материала
-                                </p>
+                                </a>
                             </div>
                         </div>
                         <div class="conclusion__recomendation-item">
@@ -180,10 +190,13 @@
                                 <span class="conclusion__recomendation-time"
                                     >23 августа &bull; 10 минут</span
                                 >
-                                <p class="conclusion__recomendation-title">
+                                <a
+                                    href="#"
+                                    class="conclusion__recomendation-title"
+                                >
                                     На Солнце произошла мощная вспышка для
                                     примера более длинное название материала
-                                </p>
+                                </a>
                             </div>
                         </div>
                         <div class="conclusion__recomendation-item">
@@ -196,10 +209,51 @@
                                 <span class="conclusion__recomendation-time"
                                     >23 августа &bull; 10 минут</span
                                 >
-                                <p class="conclusion__recomendation-title">
+                                <a
+                                    href="#"
+                                    class="conclusion__recomendation-title"
+                                >
                                     На Солнце произошла мощная вспышка для
                                     примера более длинное название материала
-                                </p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="conclusion__recomendation-item">
+                            <img
+                                src="images/sun.jpg"
+                                alt="prewie"
+                                class="conclusion__recomendation-img"
+                            />
+                            <div class="conclusion__recomendation-info">
+                                <span class="conclusion__recomendation-time"
+                                    >23 августа &bull; 10 минут</span
+                                >
+                                <a
+                                    href="#"
+                                    class="conclusion__recomendation-title"
+                                >
+                                    На Солнце произошла мощная вспышка для
+                                    примера более длинное название материала
+                                </a>
+                            </div>
+                        </div>
+                        <div class="conclusion__recomendation-item">
+                            <img
+                                src="images/sun.jpg"
+                                alt="prewie"
+                                class="conclusion__recomendation-img"
+                            />
+                            <div class="conclusion__recomendation-info">
+                                <span class="conclusion__recomendation-time"
+                                    >23 августа &bull; 10 минут</span
+                                >
+                                <a
+                                    href="#"
+                                    class="conclusion__recomendation-title"
+                                >
+                                    На Солнце произошла мощная вспышка для
+                                    примера более длинное название материала
+                                </a>
                             </div>
                         </div>
                     </div>
