--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -105,6 +105,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/simplebar.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
