--- a/app/scss/_article-component.scss
+++ b/app/scss/_article-component.scss
@@ -61,7 +61,7 @@
     }
 }
 .article-items {
-    margin-bottom: 56px;
+    // margin-bottom: 56px;
     &__dropbtn {
         background-color: $red;
         color: white;
