--- a/app/scss/_conclusion.scss
+++ b/app/scss/_conclusion.scss
@@ -1,5 +1,5 @@
 .conclusion {
-    margin-top: 56px;
+    margin-bottom: 120px;
     &__inference {
         width: 100%;
         background-color: $orange;
@@ -88,4 +88,94 @@
     &__star-box .checked {
         color: $orange;
     }
+    &__recomendation {
+        margin-bottom: 56px;
+    }
+    &__recomendation-text {
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 32px;
+        color: $black;
+        margin-bottom: 48px;
+    }
+
+    &__recomendation-list {
+        height: 416px;
+        overflow-x: hidden;
+        overflow-y: auto;
+        direction: rtl;
+
+        & > * {
+            direction: ltr;
+        }
+        &::-webkit-scrollbar {
+            width: 4px;
+        }
+        &::-webkit-scrollbar-track {
+            background-color: #d9d9d9;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-color: $orange;
+        }
+        scrollbar-color: $orange #d9d9d9;
+        scrollbar-width: thin;
+        overscroll-behavior: contain;
+    }
+    &__recomendation-item {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        gap: 32px;
+        margin-bottom: 16px;
+        padding-left: 16px;
+    }
+    &__recomendation-img {
+        border-radius: 32px 32px 32px 0;
+    }
+    &__recomendation-time {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        color: $dark-grey;
+        margin-bottom: 8px;
+    }
+    &__recomendation-title {
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 32px;
+        color: $black;
+        display: block;
+    }
+    &__widget {
+        width: 100%;
+        height: 432px;
+        background-color: $grey;
+        border-radius: 32px 32px 32px 0;
+        position: relative;
+    }
+    &__widget-text {
+        margin: 0 auto;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+.simplebar-track.simplebar-vertical {
+    background-color: #d9d9d9;
+    width: 4px;
+}
+.simplebar-scrollbar::before {
+    background-color: $orange;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 1;
+    border-radius: 0;
+}
+.simplebar-scrollbar.simplebar-visible:before {
+    opacity: 1;
+    width: 6px;
+    border-radius: 0;
 }
